// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar > Snapshot 1`] = `
<div
  aria-label="Name"
  class="SmoothCornersBox AvatarImage"
  data-state="disabled"
  data-testid="bezier-react-avatar"
  style="--b-smooth-corners-box-border-radius: 42%; --b-smooth-corners-box-shadow-blur-radius: 0px; --b-smooth-corners-box-shadow-spread-radius: 0px; --b-smooth-corners-box-padding: 0px; --b-smooth-corners-box-margin: 0px; --b-smooth-corners-box-background-color: var(--bg-white-normal); --b-smooth-corners-box-background-image: url(https://www.google.com);"
/>
`;

exports[`Avatar > renders border style 1`] = `
<div
  aria-label="Name"
  class="SmoothCornersBox AvatarImage bordered"
  data-state="disabled"
  data-testid="bezier-react-avatar"
  style="--b-smooth-corners-box-border-radius: 42%; --b-smooth-corners-box-shadow-blur-radius: 0px; --b-smooth-corners-box-shadow-spread-radius: 2px; --b-smooth-corners-box-shadow-color: var(--bg-white-high); --b-smooth-corners-box-padding: 4px; --b-smooth-corners-box-margin: 0px; --b-smooth-corners-box-background-color: var(--bg-white-normal); --b-smooth-corners-box-background-image: url(https://www.google.com);"
/>
`;

exports[`Avatar > should have right -2px, bottom -2px style on StatusWrapper 1`] = `
<div
  class="StatusWrapper"
  data-testid="bezier-react-status-wrapper"
>
  <div
    class="Status size-m"
    style="--b-status-bg-color: var(--bgtxt-green-normal);"
  />
</div>
`;

exports[`Avatar > should have right 2px, bottom 2px style on StatusWrapper when show border 1`] = `
<div
  class="StatusWrapper"
  data-testid="bezier-react-status-wrapper"
>
  <div
    class="Status size-m"
    style="--b-status-bg-color: var(--bgtxt-green-normal);"
  />
</div>
`;

exports[`Avatar > should have right 4px, bottom 4px style on StatusWrapper when size grater then 72 1`] = `
<div
  class="StatusWrapper"
  data-testid="bezier-react-status-wrapper"
>
  <div
    class="Status size-m"
    style="--b-status-bg-color: var(--bgtxt-green-normal);"
  />
</div>
`;

exports[`Avatar > should have right 4px, bottom 4px style on StatusWrapper when size grater then 90 1`] = `
<div
  class="StatusWrapper"
  data-testid="bezier-react-status-wrapper"
>
  <div
    class="Status size-l"
    style="--b-status-bg-color: var(--bgtxt-green-normal);"
  />
</div>
`;

exports[`Avatar > should have right 8px, bottom 8px style on StatusWrapper when size grater then 72 and show border 1`] = `
<div
  class="StatusWrapper"
  data-testid="bezier-react-status-wrapper"
>
  <div
    class="Status size-m"
    style="--b-status-bg-color: var(--bgtxt-green-normal);"
  />
</div>
`;

exports[`Avatar > should have right 8px, bottom 8px style on StatusWrapper when size grater then 90 and show border 1`] = `
<div
  class="StatusWrapper"
  data-testid="bezier-react-status-wrapper"
>
  <div
    class="Status size-l"
    style="--b-status-bg-color: var(--bgtxt-green-normal);"
  />
</div>
`;
